+ Limpieza de repo, subir imagenes en version movil a la galeria

--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -78,9 +78,11 @@
                                             {% if images %}
                                             <div class="row">
                                             {% for image in images %}
+                                                {% if image.image %}
                                                 <div class="col s4 z-depth-2">
                                                     <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
                                                 </div>
+                                                {% endif %}
                                             {% endfor %}
                                             </div>
                                             {% endif %}
@@ -89,11 +91,13 @@
                                         {% if videos %}
                                             <div class="row">
                                          {% for video in videos %}
+                                             {% if video.video %}
                                             <div class="col s4 z-depth-2 center">
                                                     <video class="responsive-video" controls loop>
                                                         <source src="{{ video.video.url }}" type="video/mp4">
                                                     </video>
                                             </div>
+                                             {% endif %}
                                         {% endfor %}
                                             </div>
                                         {% endif %}
