--- a/photologue/templates/photologue/videos/video_detail.html
+++ b/photologue/templates/photologue/videos/video_detail.html
@@ -55,7 +55,7 @@
                                                class="waves-effect waves-light btn right red">Eliminar</a>
                                             <div class="edit-form" id="wrapper-edit-form">
                                                 <form method="post" accept-charset="utf-8"
-                                                      action="{% url "photologue:edit-video" video_id=object.pk %}">
+                                                      action="{% url "photologue:edit-video" video_id=object.pk %}">{% csrf_token %}
                                                     <div class="row">
                                                         {{ form.name.errors }}
                                                         <div class="input-field col s12">
