--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -113,9 +113,11 @@
                                                         {% if images %}<br>
                                                         <div class="row">
                                                         {% for image in images %}
+                                                            {% if image.image %}
                                                             <div class="col s4">
                                                                 <img class="responsive-img z-depth-2 lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
+                                                            {% endif %}
                                                         {% endfor %}
                                                         </div>
                                                         {% endif %}
@@ -124,11 +126,13 @@
                                                             {% if videos %}<br>
                                                                 <div class="row">
                                                              {% for video in videos %}
+                                                                  {% if video.video %}
                                                                  <div class="col s4">
                                                                      <video class="responsive-video" controls loop>
                                                                          <source src="{{ video.video.url }}" type="video/mp4">
                                                                      </video>
                                                                  </div>
+                                                                 {% endiff %}
                                                             {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -185,9 +189,11 @@
                                                         {% if images %}<br>
                                                         <div class="row">
                                                         {% for image in images %}
+                                                            {% if image.image %}
                                                             <div class="col s4">
                                                                 <img class="lazyload responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                             </div>
+                                                            {% endif %}
                                                         {% endfor %}
                                                         </div>
                                                         {% endif %}
@@ -196,11 +202,13 @@
                                                             {% if videos %}<br>
                                                                 <div class="row">
                                                              {% for video in videos %}
+                                                                  {% if video.video %}
                                                                  <div class="col s4">
                                                                      <video class="responsive-video" controls loop>
                                                                          <source src="{{ video.video.url }}" type="video/mp4">
                                                                      </video>
                                                                  </div>
+                                                                 {% endif %}
                                                             {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -238,9 +246,11 @@
                                             {% if images %}
                                             <div class="row">
                                             {% for image in images %}
+                                                {% if image.image %}
                                                 <div class="col s4 z-depth-2">
                                                     <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                 </div>
+                                                {% endif %}
                                             {% endfor %}
                                             </div>
                                             {% endif %}
@@ -249,11 +259,13 @@
                                         {% if videos %}
                                             <div class="row">
                                          {% for video in videos %}
+                                              {% if video.video %}
                                             <div class="col s4 z-depth-2 center">
                                                     <video class="responsive-video" controls loop>
                                                         <source src="{{ video.video.url }}" type="video/mp4">
                                                     </video>
                                             </div>
+                                             {% endif %}
                                         {% endfor %}
                                             </div>
                                         {% endif %}
