--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -39,11 +39,13 @@
                                 {% if images %}<br>
                                     <div class="row">
                                         {% for image in images %}
+                                            {% if image.image %}
                                             <div class="col s12">
                                                 <img class="lazyload responsive-img materialboxed z-depth-2"
                                                      data-src="{{ image.image.url }}" alt="Imagen de: {{ item.author }}"
                                                      title="Imagen de: {{ item.author }}">
                                             </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                 {% endif %}
@@ -52,11 +54,13 @@
                                 {% if videos %}<br>
                                     <div class="row">
                                         {% for video in videos %}
+                                             {% if video.video %}
                                             <div class="col s12">
                                                 <video class="responsive-video" controls loop>
                                                     <source src="{{ video.video.url }}" type="video/mp4">
                                                 </video>
                                             </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                 {% endif %}
@@ -109,11 +113,13 @@
                     <br>
                     <div class="row videos">
                         {% for video in videos %}
+                             {% if video.video %}
                             <div class="col s12 center">
                                 <video class="responsive-video" controls loop>
                                     <source src="{{ video.video.url }}" type="video/mp4">
                                 </video>
                             </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 {% endif %}
