--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -1,5 +1,5 @@
 {% extends "account/base_interface.html" %}
-{% load app_filters avatar_tags static humanize compress %}
+{% load app_filters avatar_tags static humanize %}
 {% block title %} <title>Skyfolk / Mi ensalada de frutas.</title> {% endblock %}
 
 {% block extra-css %}
