--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -58,9 +58,11 @@
                         {% if images %}
                         <div class="row images">
                             {% for image in images %}
+                                {% if image.image %}
                             <div class="col s4 z-depth-2 center">
                                 <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
+                                {% endif %}
                             {% endfor %}
                         </div>
                         {% endif %}
