--- a/photologue_groups/templates/photologue_groups/videos/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/videos/publications_entries.html
@@ -55,9 +55,11 @@
                         {% if images %}
                         <div class="row images">
                             {% for image in images %}
+                                {% if image.image %}
                             <div class="col s4 z-depth-2 center">
                                 <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
+                                {% endif %}
                             {% endfor %}
                         </div>
                         {% endif %}
@@ -66,12 +68,14 @@
                         {% if videos %}
                         <div class="row videos">
                            {% for video in videos %}
+                               {% if video.video %}
                            <div class="col s4 z-depth-2 center">
                             <video class="responsive-video" controls loop>
                                 <source src="{{ video.video.url }}" type="video/mp4">
                                 </video>
                             </div>
                             {% endfor %}
+                        {% endif %}
                         </div>
                         {% endif %}
                         {% endwith %}
