--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -75,12 +75,14 @@
                                                         {% if images %}<br>
                                                             <div class="row">
                                                                 {% for image in images %}
+                                                                    {% if image.image %}
                                                                     <div class="col s4">
                                                                         <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                              data-src="{{ image.image.url }}"
                                                                              alt="Imagen de: {{ node.author }}"
                                                                              title="Imagen de: {{ node.author }}">
                                                                     </div>
+                                                                    {% endif %}
                                                                 {% endfor %}
                                                             </div>
                                                         {% endif %}
@@ -89,12 +91,14 @@
                                                         {% if videos %}<br>
                                                             <div class="row">
                                                                 {% for video in videos %}
+                                                                    {% if video.video %}
                                                                     <div class="col s4">
                                                                         <video class="responsive-video" controls loop>
                                                                             <source src="{{ video.video.url }}"
                                                                                     type="video/mp4">
                                                                         </video>
                                                                     </div>
+                                                                    {% endif %}
                                                                 {% endfor %}
                                                             </div>
                                                         {% endif %}
@@ -147,11 +151,13 @@
                                         {% if videos %}
                                             <div class="row videos">
                                                 {% for video in videos %}
+                                                    {% if video.video %}
                                                     <div class="col s4 z-depth-2 center">
                                                         <video class="responsive-video" controls loop>
                                                             <source src="{{ video.video.url }}" type="video/mp4">
                                                         </video>
                                                     </div>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </div>
                                         {% endif %}
