--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -69,12 +69,14 @@
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -83,6 +85,7 @@
                                                             {% if videos %}<br>
                                                                 <div class="row">
                                                                     {% for video in videos %}
+                                                                         {% if video.video %}
                                                                         <div class="col s4">
                                                                             <video class="responsive-video" controls
                                                                                    loop>
@@ -92,6 +95,7 @@
                                                                                 {% endif %}
                                                                             </video>
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -149,12 +153,14 @@
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -163,6 +169,7 @@
                                                             {% if videos %}<br>
                                                                 <div class="row">
                                                                     {% for video in videos %}
+                                                                         {% if video.video %}
                                                                         <div class="col s4">
                                                                             <video class="responsive-video" controls
                                                                                    loop>
@@ -172,6 +179,7 @@
                                                                                 {% endif %}
                                                                             </video>
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -210,12 +218,14 @@
                                             {% if images %}
                                                 <div class="row images">
                                                     {% for image in images %}
+                                                        {% if image.image %}
                                                         <div class="col l4 s12 z-depth-2 center">
                                                             <img class="lazyload materialboxed responsive-img"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
@@ -224,6 +234,7 @@
                                             {% if videos %}
                                                 <div class="row videos">
                                                     {% for video in videos %}
+                                                         {% if video.video %}
                                                         <div class="col s4 z-depth-2 center">
                                                             <video class="responsive-video" controls loop>
                                                                 {% if video.video %}
@@ -231,6 +242,7 @@
                                                                 {% endif %}
                                                             </video>
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
