--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -47,9 +47,11 @@ rf{% load decorators %}
                             {% if images %}
                             <div class="row">
                                 {% for image in images %}
+                                    {% if image.image %}
                                 <div class="col s4 z-depth-2">
                                     <img class="responsive-img materialboxed lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                 </div>
+                                    {% endif %}
                                 {% endfor %}
                             </div>
                             {% endif %}
@@ -58,11 +60,13 @@ rf{% load decorators %}
                             {% if videos %}
                             <div class="row">
                                {% for video in videos %}
+                                    {% if video.video %}
                                <div class="col s4 z-depth-2 center">
                                 <video class="responsive-video" controls loop>
                                     <source src="{{ video.video.url }}" type="video/mp4">
                                     </video>
                                 </div>
+                                   {% endif %}
                                 {% endfor %}
                             </div>
                             {% endif %}
