--- a/skyfolk/templates/channels/new_photo_publication.html
+++ b/skyfolk/templates/channels/new_photo_publication.html
@@ -50,9 +50,11 @@
                         {% if images %}
                         <div class="row images">
                             {% for image in images %}
+                                {% if image.image %}
                             <div class="col s4 z-depth-2 center">
                                 <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
                             </div>
+                                {% endif %}
                             {% endfor %}
                         </div>
                         {% endif %}
@@ -61,11 +63,13 @@
                         {% if videos %}
                         <div class="row videos">
                            {% for video in videos %}
+                                {% if video.video %}
                            <div class="col s4 z-depth-2 center">
                             <video class="responsive-video" controls loop>
                                 <source src="{{ video.video.url }}" type="video/mp4">
                                 </video>
                             </div>
+                               {% endif %}
                             {% endfor %}
                         </div>
                         {% endif %}
