--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -70,9 +70,11 @@
                                     {% if images %}<br>
                                     <div class="row">
                                         {% for image in images %}
+                                            {% if image.image %}
                                         <div class="col s4">
                                             <img class="lazyload materialboxed responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                         </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                     {% endif %}
@@ -81,11 +83,13 @@
                                     {% if videos %}<br>
                                     <div class="row">
                                        {% for video in videos %}
+                                            {% if video.video %}
                                        <div class="col s4">
                                            <video class="responsive-video" controls loop>
                                                <source src="{{ video.video.url }}" type="video/mp4">
                                                </video>
                                            </div>
+                                           {% endif %}
                                            {% endfor %}
                                        </div>
                                        {% endif %}
@@ -123,9 +127,11 @@
                                 {% if images %}
                                 <div class="row images">
                                     {% for image in images %}
+                                        {% if image.image %}
                                     <div class="col s4 z-depth-2 center">
                                         <img class="lazyload materialboxed responsive-img" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                     </div>
+                                        {% endif %}
                                     {% endfor %}
                                 </div>
                                 {% endif %}
@@ -134,11 +140,13 @@
                                 {% if videos %}
                                 <div class="row videos">
                                    {% for video in videos %}
+                                        {% if video.video %}
                                    <div class="col s4 z-depth-2 center">
                                     <video class="responsive-video" controls loop>
                                         <source src="{{ video.video.url }}" type="video/mp4">
                                         </video>
                                     </div>
+                                       {% endif %}
                                     {% endfor %}
                                 </div>
                                 {% endif %}
