--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -58,9 +58,11 @@
                                 {% if images %}<br>
                                 <div class="row">
                                     {% for image in images %}
+                                        {% if image.image %}
                                     <div class="col s4">
                                         <img class="responsive-img z-depth-2 lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                     </div>
+                                        {% endif %}
                                     {% endfor %}
                                 </div>
                                 {% endif %}
@@ -69,11 +71,13 @@
                                 {% if videos %}<br>
                                 <div class="row">
                                    {% for video in videos %}
+                                        {% if video.video %}
                                    <div class="col s4">
                                        <video class="responsive-video" controls loop>
                                            <source src="{{ video.video.url }}" type="video/mp4">
                                            </video>
                                        </div>
+                                       {% endif %}
                                        {% endfor %}
                                    </div>
                                    {% endif %}
@@ -112,9 +116,11 @@
                             {% if images %}
                             <div class="row">
                                 {% for image in images %}
+                                    {% if image.image %}
                                 <div class="col s4 z-depth-2">
                                     <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                 </div>
+                                    {% endif %}
                                 {% endfor %}
                             </div>
                             {% endif %}
@@ -123,11 +129,13 @@
                             {% if videos %}
                             <div class="row">
                                {% for video in videos %}
+                                    {% if video.video %}
                                <div class="col s4 z-depth-2 center">
                                 <video class="responsive-video" controls loop>
                                     <source src="{{ video.video.url }}" type="video/mp4">
                                     </video>
                                 </div>
+                                   {% endif %}
                                 {% endfor %}
                             </div>
                             {% endif %}
