--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -53,12 +53,14 @@
                                             {% if images %}
                                                 <div class="row images">
                                                     {% for image in images %}
+                                                        {% if image.image %}
                                                         <div class="col s4 z-depth-2 center">
                                                             <img class="lazyload responsive-img"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
@@ -67,11 +69,13 @@
                                             {% if videos %}
                                                 <div class="row videos">
                                                     {% for video in videos %}
+                                                         {% if video.video %}
                                                         <div class="col s4 z-depth-2 center">
                                                             <video class="responsive-video" controls loop>
                                                                 <source src="{{ video.video.url }}" type="video/mp4">
                                                             </video>
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
