--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -107,12 +107,14 @@
                                             {% if images %}
                                                 <div class="row">
                                                     {% for image in images %}
+                                                        {% if image.image %}
                                                         <div class="col s4 z-depth-2">
                                                             <img class="responsive-img materialboxed lazyload"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
@@ -121,11 +123,13 @@
                                             {% if videos %}
                                                 <div class="row">
                                                     {% for video in videos %}
+                                                         {% if video.video %}
                                                         <div class="col s4 z-depth-2 center">
                                                             <video class="responsive-video" controls loop>
                                                                 <source src="{{ video.video.url }}" type="video/mp4">
                                                             </video>
                                                         </div>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </div>
                                             {% endif %}
