--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -179,12 +179,14 @@ Template para las busquedas
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -257,12 +259,14 @@ Template para las busquedas
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -527,12 +531,14 @@ Template para las busquedas
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
@@ -605,12 +611,14 @@ Template para las busquedas
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
+                                                                        {% if image.image %}
                                                                         <div class="col l4 s12">
                                                                             <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
                                                                         </div>
+                                                                        {% endif %}
                                                                     {% endfor %}
                                                                 </div>
                                                             {% endif %}
