--- a/skyfolk/templates/account/mobile-menu.html
+++ b/skyfolk/templates/account/mobile-menu.html
@@ -1,15 +1,5 @@
 <div class="hide-on-large-only fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large blue darken-1">
-        <i class="large material-icons">menu</i>
+    <a id="publish3" class="btn-floating btn-large blue darken-1">
+        <i class="large material-icons">create</i>
     </a>
-    <ul>
-        <li><a href="{% url 'user_profile:profile' request.user %}" class="btn-floating blue darken-1"><i class="material-icons">home</i></a>
-        </li>
-        <li><a id="publish3" class="btn-floating blue darken-1"><i class="material-icons">create</i></a></li>
-        <li><a href="/following/{{ request.user.username }}" class="btn-floating blue darken-1"><i
-                class="material-icons">person</i></a></li>
-        <li><a id="agregar-amigo2" class="btn-floating blue darken-1"><i class="material-icons">person_add</i></a></li>
-        <li><a href="{% url 'account_logout' %}" class="btn-floating blue darken-1"><i class="material-icons">exit_to_app</i></a>
-        </li>
-    </ul>
 </div>
