--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -132,7 +132,7 @@
                                                                          <source src="{{ video.video.url }}" type="video/mp4">
                                                                      </video>
                                                                  </div>
-                                                                 {% endiff %}
+                                                                 {% endif %}
                                                             {% endfor %}
                                                                 </div>
                                                             {% endif %}
