FIX AWS HEADERS

--- a/postman/templates/postman/base_write.html
+++ b/postman/templates/postman/base_write.html
@@ -111,7 +111,7 @@
                             (
                                 {
                                     value: user.username,
-                                    label: '@' + user.username,
+                                    label: user.username,
                                 }
                             )
                         );
