--- a/skyfolk/templates/groups/user_list_page.html
+++ b/skyfolk/templates/groups/user_list_page.html
@@ -9,7 +9,7 @@
                     <div class="header">
                         {% if item.from_like__profile__back_image %}
                             <img class="back-profile-user"
-                                 src="{{ MEDIA_URL }}{{ item.from_like__profile__back_image }}">
+                                 src="{{ item.from_like__profile__back_image }}">
                         {% else %}
                             <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
