--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1077,6 +1077,51 @@ ul.table > li
   max-width: 100%
   max-height: 100%
 
+.workspaces
+  position: absolute
+  z-index: 9999
+  left: 0
+  right: 0
+  margin-right: auto
+  margin-left: auto
+  background-color: #fafafa
+  top: 10%
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5)
+  display: none
+
+.workspaces .trofeo-user
+  height: 90px
+  display: inline-block
+  border-radius: 100%
+  background-color: transparent
+  border: 5px solid #1e88e5
+  margin-left: 50px
+  margin-top: 15px
+
+.workspaces .workspaces-title
+  text-align: center
+  color: #212121
+  font-size: 2em
+  padding-bottom: 10px
+  font-weight: 100
+  margin: 10px auto
+  border-bottom: 1px solid #212121
+  width: 80%
+
+.workspaces .wrapper-workspaces
+  position: relative
+  width: 85%
+  margin: auto auto auto 7%
+  height: 570px
+
+.workspaces img
+  width: 60px
+  height: 60px
+  border-radius: 100%
+  margin-left: -5px
+  -webkit-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
+  -moz-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
+  box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
 /*Fin informacion perfil */
 
 /* Presencia user */
