--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -112,6 +112,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     {% if user_profile == request.user %}
                         <li title="Mi contenido" onclick="location.href='{% url "user_profile:salad_user_content" %}'"><i class="material-icons">bookmark</i></li>
                     {% endif %}
+                    <li class="info-workspaces" title="Workspaces de {{ user_profile.username }}" data-id="{{ user_profile.id }}"><i class="material-icons">dashboard</i></li>
                 </ul>
             </div>
         </div>
@@ -132,6 +133,16 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
             </div>
             <div class="row">
                 <div class="col l12 m12 s12 wrapper-groups">
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m12 l10 offset-l1 workspaces">
+            <div class="row">
+                <span id="close-workspaces" class="material-icons right">remove</span>
+                <h3 class="workspaces-title">Workspaces de {{ user_profile.username }}</h3>
+            </div>
+            <div class="row">
+                <div class="col l12 m12 s12 wrapper-workspaces">
                 </div>
             </div>
         </div>
